# ROBOT

./: .gitignore  CMakeLists.txt  ROBOT.kdev4  ROBOTConfig-2.yaml  ROBOTConfig.yaml  readme.md
Log/: test-DataProcessor.INFO  test-DataProcessor.WARNING  test-DataProcessor.flammingdeMacBook-Air.local.flamming.log.WARNING.20180111-193335.97565
TestUnits/: main.cpp  test.cpp  test_DataProcessor.cpp
data/cat/: cat.mtl  cat_gtpose.txt  distortions.txt
include/: DT.h  DataPaser.h  Frame.h  GlobalConfig.h  Model.h  MySolver.h  OcvYamlConfig.h  Pose.h  Region.h  Render.h  Sgementation.h  Solver.h  Tracker.h  bresenhams_circle.h  dataPaser.h  frame.h  histogram.h
src/: DT.cpp  DataPaser.cpp  Frame.cpp  Model.cpp  ModelCV.cpp  MySolver.cpp  OcvYamlConfig.cpp  Pose.cpp  Region.cpp  Render.cpp  Sgementation.cpp  Solver.cpp  Tracker.cpp  bresenhams_circle.cpp  dataPaser.cpp  frame.cpp  histogram.cpp  test.cpp
